--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         uses: arduino/setup-task@v2
 
       - name: Install dependencies
-        run: uv sync --dev
+        run: uv sync --extra dev
 
       - name: Lint
         run: task lint-check
@@ -59,7 +59,7 @@ jobs:
         uses: arduino/setup-task@v2
 
       - name: Install dependencies
-        run: uv sync --dev
+        run: uv sync --extra dev
 
       - name: Build
         run: task build-ci
