feat: add subtitle validation and overlap fixing
  - Add ValidationError and ValidationOptions classes
  - Add validate() method to SubRipFile
  - Add fix_overlaps() method for timing adjustment
  - Add CLI commands: validate and fix-overlaps
  - Bump version to 1.2.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "pysrt"
-version = "1.1.2"
+version = "1.2.0"
 description = "SubRip (.srt) subtitle parser and writer"
-readme = "README.rst"
+readme = "README.md"
 license = "GPL-3.0-or-later"
 authors = [
     { name = "Jean Boussier", email = "jean.boussier@gmail.com" }
